accordion: * dynamic max height * openInitially prop is now working * no longer hides suggestion box options when dropdown menu is visible * other various bug fixes

--- a/app/src/components/accordion.module.css
+++ b/app/src/components/accordion.module.css
@@ -3,8 +3,31 @@
     /* transition-duration: 0.3s; */
     /* transition: max-height 0.5s cubic-bezier(0, 1, 0, 1); */
     /* transition: max-height 1s cubic-bezier(.55,.04,.5,1.01); */
-    transition: max-height 0.5s ease-in-out;
-    
+    transition: max-height 0.5s linear;
+    /* padding-bottom:1.25em; */
+}
+
+.initiallyClosedWithoutDivider {
+    overflow:hidden;
+}
+
+.initiallyClosedWithDivider {
+    overflow:hidden;
+    border-bottom: 1px solid var(--filterDivider);
+}
+
+.contentOpen {
+    /* border-bottom: 1px solid var(--filterDivider); */
+    overflow: hidden;
+    transition: 
+    max-height 0.5s linear;
+    /* overflow 0.5s 0.5s; */
+}
+
+.contentClosed {
+    /* border-bottom: 1px solid var(--filterDivider); */
+    transition: max-height 0.5s linear;
+    overflow: hidden;
 }
 
 .buttonWrapper {
@@ -15,14 +38,29 @@
 
 .dividerOpen, .dividerClosed {
     border-bottom: 1px solid var(--filterDivider);
+    /* transition: max-height 0.5s linear; */
 }
 
 .dividerOpen {
     padding-bottom: 1.25em;
+    overflow: hidden;
+    transition: 
+    max-height 1s linear,
+    padding-bottom 0.5s 0.5s linear;
+    /* overflow 0.5s 0.5s; */
 }
 
+/* .dividerOpen::after {
+    content: "TEST";
+    overflow: visible;
+    background-color: red;
+} */
+
 .dividerClosed {
-    padding-bottom: 1.25em;
+    overflow: hidden;
+    transition: 
+    padding-bottom 0.5s 0.5s linear,
+    max-height 0.5s linear;
 }
 
 h5 {
